# cool-serial

./: .gitmodules  CMakeLists.txt  README.md
include/cista/: cista.h
include/cool_serial/: byte.hpp  byte_queue.hpp  bytes.hpp  cista_protocol.hpp  continuous_parser.hpp  cool_message.hpp  header_section.hpp  idata_handler.hpp
include/cool_serial/data_handler/: data_router.hpp  handler_map.hpp  idata_handler.hpp
include/cool_serial/dynamic_parser/: data_found_listener.hpp  dynamic_data_extract.hpp  dynamic_header_extract.hpp  dynamic_parser.hpp  dynamic_segment_extractor.hpp  dynamic_sof_search.hpp  header_found_listener.hpp  segment_found_listener.hpp  start_of_frame_found_listener.hpp
include/cool_serial/mock/data_handler/: idata_handler_mock.hpp
include/cool_serial/mock/dynamic_parser/: data_found_listener_mock.hpp  header_found_listener_mock.hpp  segment_found_listener_mock.hpp  start_of_frame_listener_mock.hpp
test/: cistaTest.cpp  continuousParserTest.cpp  headerTest.cpp  messageTest.cpp
test/data_handler/: data_router_test.cpp  idata_handler.hpp
test/dynamic_parser/: dynamic_data_extract_test_.cpp  dynamic_header_extract_test.cpp  dynamic_parser_test.cpp  dynamic_segment_extractor_test.cpp  dynamic_sof_search_test.cpp
